--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,13 @@ main {
     height: 900px;
 }
 
+button{
+background-color: black;
+   align-content: center;
+    display: block;
+    margin: 0 auto;
+}
+
 header {
     background-color: white;
 }
@@ -89,12 +96,16 @@ section {}
 footer {
     color: white;
     text-align: center;
-    padding: 10px;
     background-color: black;
     clear: both;
-    display: inline-flex;
+
 }
 
+footer img{
+display: inline-flex;
+    width: 50px;
+    height: 50px;
+}
 h1 {
     background-image: url("../img/line1.jpg");
     background-size: 100%, 100%;
@@ -135,17 +146,22 @@ p {
     font-size: 15px;
 }
 img {
-    display: grid;
-    padding-bottom: 200px;
+    align-content: center;
+    display: block;
     margin: 0 auto;
-    padding: 100px;
+
 }
 
-.logo{
-   display: flex;
+/* smartphone and tablet: */
+@media only screen and (min-width: 30em) and (max-width: 59em){}
+    
+    body{
+        width: 100%;
+    }   
+
+main{
+display: block;
 }
 
-
-
-
+}
 
