changed width of submissions

--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,8 @@ input[type=submit]:hover {
     border-radius: 5px;
     background-color: 0;
     padding: 20px;
+    width: 400px;
+    margin: auto 0;
 }
 
 label{
