--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,6 @@ input[type=submit] {
     cursor: pointer;
 }
 
-/* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
     background-color: gainsboro;
 }
@@ -215,5 +214,5 @@ div {
   background-color: #e0d3a3
 }
 div:hover {
-  background-color:#f7ecc5
+  background-color:bisque;
 }
